Deploy/react-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui

spec:
  replicas: 2

  selector:
    matchLabels:
      app: react-ui

  template:
    metadata:
      labels:
        app: react-ui

    spec:
      containers:
      - name: react-ui
        image: react-ui:v1
        imagePullPolicy: Never

        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 150m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: react-ui

spec:
  selector:
    app: react-ui

  ports:
  - port: 80
    targetPort: 80
