Deploy/sap-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sap-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sap-api

  template:
    metadata:
      labels:
        app: sap-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"

    spec:
      containers:
      - name: sap-api
        image: sap-api:v1
        imagePullPolicy: Never

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: sap-api

spec:
  type: ClusterIP

  selector:
    app: sap-api

  ports:
  - port: 8080
    targetPort: 8080
